slider overflow fixed

--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -1,7 +1,12 @@
 .rounded {
   border-radius: 40px;
-  width: 100%;  
-  box-shadow: inset rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  width: 100%;
+  box-shadow: inset rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.glide {
+  overflow: hidden;
 }
 
 .glide__track {
@@ -31,8 +36,8 @@
 .glide__arrow__right {
   right: 7%;
 }
-.svg{
-    transform: rotate(180deg);
+.svg {
+  transform: rotate(180deg);
 }
 .glide__arrow--disabled {
   opacity: 0.33;
